--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,23 @@
+.project-button {
+  border-radius: 9999px;
+  font-size: 18;
+  height: 30px;
+  text-align: center;
+}
+
 .App {
   text-align: center;
+}
+
+.display-box {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  align-items: left;
+  justify-content: space-evenly;
+  row-gap: 10px;
+  column-gap: 20px;
+  background-color: rgb(22, 2, 36);
 }
 
 .App-logo {
