--- a/src/components/Story/story.css
+++ b/src/components/Story/story.css
@@ -1,4 +1,4 @@
-.expert-article {
+.story-info {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
   color: whitesmoke;
 }
