--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,12 @@
   font-size: 18;
   height: 30px;
   text-align: center;
+  background-color: transparent;
+  color: whitesmoke;
+}
+
+.project-button:hover {
+  background-color: darkcyan;
 }
 
 .App {
@@ -18,39 +24,4 @@
   row-gap: 10px;
   column-gap: 20px;
   background-color: rgb(22, 2, 36);
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
