--- a/src/components/PersonalInfo/info.css
+++ b/src/components/PersonalInfo/info.css
@@ -11,6 +11,17 @@
   cursor: pointer;
 }
 
+.popup {
+  color: rgb(34, 158, 34);
+  background-color: rgb(22, 2, 36);
+  border-style: solid;
+  border-width: 1px;
+  border-color: rgb(34, 158, 34);
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
+  font-size: 1.25em;
+  width: 450px;
+}
+
 .header-link {
   color: rgb(34, 158, 34);
   text-decoration: none;
