--- a/src/App.css
+++ b/src/App.css
@@ -9,20 +9,32 @@
 }
 
 .project-button:hover {
-  background-color: rgb(2, 0, 139);
+  background-color: darkcyan;
 }
 
 .App {
   text-align: center;
 }
 
+.site-container {
+  display: flex;
+  height: 100%;
+  width: 100%;
+  min-width: 100%;
+  min-height: 100%;
+  background-color: #121417;
+}
+
 .display-box {
   display: flex;
   flex-direction: column;
   height: 100%;
+  width: 100%;
+  min-width: 100%;
+  min-height: 100%;
   align-items: left;
   justify-content: space-evenly;
   row-gap: 10px;
   column-gap: 20px;
-  background-color: rgb(22, 2, 36);
+  background-color: #121417;
 }
