--- a/src/components/PersonalInfo/info.css
+++ b/src/components/PersonalInfo/info.css
@@ -8,18 +8,19 @@
 .me-8bit:hover {
   opacity: 0.8;
   transition: 0.2s ease;
-  cursor: pointer;
 }
 
 .popup {
   color: rgb(34, 158, 34);
-  background-color: rgb(22, 2, 36);
+  background-color: #121417;
   border-style: solid;
   border-width: 1px;
   border-color: rgb(34, 158, 34);
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
   font-size: 1.25em;
-  width: 450px;
+  max-width: 450px;
+  min-width: 100px;
+  padding: 5px;
 }
 
 .header-link {
@@ -32,4 +33,6 @@
 .header-link:hover {
   cursor: pointer;
   color: rgb(98, 192, 35);
+  transition: 0.2s ease;
+  cursor: pointer;
 }
