--- a/src/components/PersonalInfo/info.css
+++ b/src/components/PersonalInfo/info.css
@@ -1,13 +1,22 @@
+@font-face {
+  font-family: "IBM Plex Mono";
+  font-style: normal;
+  font-weight: 400;
+  src: url(https://fonts.gstatic.com/s/ibmplexmono/v15/-F63fjptAgt5VM-kVkqdyU8n1i8q1w.woff2) format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212,
+    U+2215, U+FEFF, U+FFFD;
+}
+
 .info-box {
   width: 400px;
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
-  font-size: 1.25em;
+  font-family: "IBM Plex Mono";
+  font-size: 1.15em;
   color: whitesmoke;
 }
 
 .me-8bit:hover {
   opacity: 0.8;
-  transition: 0.2s ease;
+  transition: 0.2s ease-in-out;
 }
 
 .offsite-nav {
@@ -18,7 +27,7 @@
   border-radius: 9999px;
   margin-right: 5px;
   border-style: solid;
-  border-color: rgb(34, 158, 34);
+  border-color: #00ff00;
   border-width: 1px;
   color: white;
   text-decoration: none;
@@ -30,13 +39,13 @@
 }
 
 .popup {
-  color: rgb(34, 158, 34);
+  color: #00ff00;
   background-color: #121417;
   border-style: solid;
   border-width: 1px;
-  border-color: rgb(34, 158, 34);
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
-  font-size: 1.25em;
+  border-color: #00ff00;
+  font-family: "IBM Plex Mono";
+  font-size: 1.15em;
   max-width: 450px;
   min-width: 100px;
   padding: 5px;
@@ -44,7 +53,7 @@
 }
 
 .header-link {
-  color: rgb(34, 158, 34);
+  color: #00ff00;
   text-decoration: none;
   background-color: transparent;
   border: none;
@@ -52,7 +61,7 @@
 
 .header-link:hover {
   cursor: pointer;
-  color: rgb(98, 192, 35);
+  color: #63c507;
   transition: 0.2s ease;
   cursor: pointer;
 }
