--- a/src/App.css
+++ b/src/App.css
@@ -20,20 +20,25 @@
   display: flex;
   height: 100%;
   width: 100%;
-  min-width: 100%;
-  min-height: 100%;
   background-color: #121417;
 }
 
 .display-box {
   display: flex;
   flex-direction: column;
-  height: auto;
-  width: auto;
-  margin: 1.5% 1.5%;
+  height: 100%;
+  width: 40%;
+  margin-top: 3em;
+  margin-left: auto;
+  margin-right: auto;
   align-items: left;
   justify-content: space-evenly;
-  row-gap: 10px;
-  column-gap: 20px;
+  row-gap: 60px;
+  column-gap: 10px;
   background-color: #121417;
+}
+
+h1 {
+  font-family: "IBM Plex Mono Bold";
+  font-size: 4.5em !important;
 }
