--- a/src/components/Experts/goggles.css
+++ b/src/components/Experts/goggles.css
@@ -10,6 +10,24 @@
 .expert-article {
   font-family: "IBM Plex Mono";
   color: whitesmoke;
+  display: flex;
+  flex-direction: column;
+  row-gap: 40px;
+}
+
+.video-responsive {
+  overflow: hidden;
+  padding-bottom: 56.25%;
+  position: relative;
+  height: 0;
+}
+
+.video-responsive iframe {
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  position: absolute;
 }
 
 .header-link {
