--- a/src/components/PersonalInfo/info.css
+++ b/src/components/PersonalInfo/info.css
@@ -1,17 +1,21 @@
 @font-face {
-  font-family: "IBM Plex Mono";
+  font-family: "IBM Plex Mono Bold";
   font-style: normal;
-  font-weight: 400;
-  src: url(https://fonts.gstatic.com/s/ibmplexmono/v15/-F63fjptAgt5VM-kVkqdyU8n1i8q1w.woff2) format("woff2");
+  font-weight: 600;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/ibmplexmono/v15/-F6qfjptAgt5VM-kVkqdyU8n3vAOwlBFgg.woff2) format("woff2");
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212,
     U+2215, U+FEFF, U+FFFD;
 }
 
 .info-box {
-  width: 400px;
-  font-family: "IBM Plex Mono";
+  width: auto;
+  font-family: "IBM Plex Mono Bold";
   font-size: 1.15em;
   color: whitesmoke;
+  position: absolute;
+  right: 0;
+  top: 0;
 }
 
 .me-8bit:hover {
@@ -61,7 +65,8 @@
 
 .header-link:hover {
   cursor: pointer;
-  color: #63c507;
+  color: #00ff73;
+  text-shadow: 0 0 7px #008f00, 0 0 10px #008f00;
   transition: 0.2s ease;
   cursor: pointer;
 }
