--- a/src/components/PersonalInfo/info.css
+++ b/src/components/PersonalInfo/info.css
@@ -24,22 +24,18 @@
 }
 
 .offsite-nav {
-  background-color: #071936;
+  background-color: transparent;
   float: left;
   padding: 10px;
   margin-left: 5px;
   border-radius: 9999px;
   margin-right: 5px;
-  border-style: solid;
-  border-color: #00ff00;
-  border-width: 1px;
   color: white;
   text-decoration: none;
 }
 
 .offsite-nav:hover {
-  background-color: #080736;
-  opacity: 0.9;
+  color: #00ff00;
 }
 
 .popup {
