--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,29 @@
-.project-button {
-  border-radius: 9999px;
-  font-size: 18;
-  height: 30px;
-  text-align: center;
-  background-color: transparent;
-  color: whitesmoke;
-  border-width: 1px;
+/*font stuff*/
+@font-face {
+  font-family: "IBM Plex Mono";
+  font-style: normal;
+  font-weight: 400;
+  src: url(https://fonts.gstatic.com/s/ibmplexmono/v15/-F63fjptAgt5VM-kVkqdyU8n1i8q1w.woff2) format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212,
+    U+2215, U+FEFF, U+FFFD;
 }
 
-.project-button:hover {
-  background-color: darkcyan;
+@font-face {
+  font-family: "IBM Plex Mono Bold";
+  font-style: normal;
+  font-weight: 600;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/ibmplexmono/v15/-F6qfjptAgt5VM-kVkqdyU8n3vAOwlBFgg.woff2) format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212,
+    U+2215, U+FEFF, U+FFFD;
 }
 
+h1 {
+  font-family: "IBM Plex Mono Bold";
+  font-size: 3.5em !important;
+}
+
+/*general site layout*/
 .App {
   text-align: center;
 }
@@ -27,7 +39,7 @@
   display: flex;
   flex-direction: column;
   height: 100%;
-  width: 40%;
+  max-width: 768px;
   margin-top: 3em;
   margin-left: auto;
   margin-right: auto;
@@ -38,7 +50,114 @@
   background-color: #121417;
 }
 
-h1 {
+/*text layout stuff*/
+.article {
+  font-family: "IBM Plex Mono";
+  color: whitesmoke;
+  display: flex;
+  flex-direction: column;
+  row-gap: 40px;
+}
+
+.header-link {
+  color: #00ff00;
+  text-decoration: none;
+}
+
+.header-link:hover {
+  cursor: pointer;
+  color: #00ff73;
+  text-shadow: 0 0 7px #008f00, 0 0 10px #008f00;
+  transition: 0.2s ease;
+  cursor: pointer;
+}
+
+/*article content css*/
+.picture-box {
+  width: 100%;
+  height: auto;
+}
+
+.video-responsive {
+  overflow: hidden;
+  padding-bottom: 56.25%;
+  position: relative;
+  height: 0;
+}
+
+.video-responsive iframe {
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+}
+
+/* navigation button css */
+.inactive-button {
+  border-radius: 9999px;
+  font-size: 1.25em;
+  padding: 0px 16px;
+  text-align: end;
+  background-color: transparent;
+  color: #00ff00;
+  border-width: 0px;
+}
+
+.inactive-button:hover {
+  background-color: #221724;
+  transition: 0.2s ease;
+  opacity: 0.9;
+  color: #ffffff;
+}
+
+.active-button {
+  border-radius: 9999px;
+  font-size: 1.25em;
+  padding: 0px 16px;
+  text-align: end;
+  color: #121417;
+  background-color: #ffffff;
+  border-width: 1px;
+}
+
+.active-button:hover {
+  transition: 0.2s ease;
+  opacity: 0.9;
+}
+
+.project-button {
+  border-radius: 9999px;
+  font-size: 18;
+  height: 30px;
+  text-align: end;
+  background-color: transparent;
+  color: whitesmoke;
+  border-width: 1px;
+}
+
+.project-button:hover {
+  background-color: darkcyan;
+}
+
+/*navigation container stuff*/
+.nav-buttons {
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
   font-family: "IBM Plex Mono Bold";
-  font-size: 3.5em !important;
+  gap: 15px;
+}
+
+.me-8bit {
+  margin-left: auto;
+  margin-right: 0;
+}
+
+.me-8bit:hover {
+  opacity: 0.8;
+  transition: 0.2s ease-in-out;
 }
